--- a/docs/integrations/prefect-aws/index.mdx
+++ b/docs/integrations/prefect-aws/index.mdx
@@ -148,4 +148,4 @@ if __name__ == "__main__":
 
 For assistance using AWS, consult the [AWS documentation](https://docs.aws.amazon.com/) and, in particular, the [Boto3 documentation](https://boto3.amazonaws.com/v1/documentation/api/latest/index.html).
 
-Refer to the `prefect-aws` API documentation linked in the sidebar to explore all the capabilities of the `prefect-aws` library.
+Refer to the `prefect-aws` SDK documentation linked in the sidebar to explore all the capabilities of the `prefect-aws` library.
