--- a/docs/integrations/prefect-bitbucket/index.mdx
+++ b/docs/integrations/prefect-bitbucket/index.mdx
@@ -138,4 +138,4 @@ if __name__ == "__main__":
 
 For assistance using Bitbucket, consult the [Bitbucket documentation](https://bitbucket.org/product/guides).
 
-Refer to the prefect-bitbucket API documentation linked in the sidebar to explore all the capabilities of the prefect-bitbucket library.
+Refer to the `prefect-bitbucket` SDK documentation linked in the sidebar to explore all the capabilities of the `prefect-bitbucket` library.
