--- a/docs/integrations/prefect-dask/index.mdx
+++ b/docs/integrations/prefect-dask/index.mdx
@@ -372,9 +372,8 @@ if __name__ == "__main__":
     my_flow()
 ```
 
-
 ## Additional Resources
 
-Refer to the `prefect-dask` API documentation linked in the sidebar to explore all the capabilities of the `prefect-dask` library.
+Refer to the `prefect-dask` SDK documentation linked in the sidebar to explore all the capabilities of the `prefect-dask` library.
 
 For assistance using Dask, consult the [Dask documentation](https://docs.dask.org/en/stable/)
