--- a/docs/integrations/prefect-databricks/index.mdx
+++ b/docs/integrations/prefect-databricks/index.mdx
@@ -134,4 +134,4 @@ Note, instead of using the built-in models, you may also input valid JSON. For e
 
 For assistance using Databricks, consult the [Databricks documentation](https://www.databricks.com/databricks-documentation).
 
-Refer to the `prefect-databricks` API documentation linked in the sidebar to explore all the capabilities of the `prefect-databricks` library.
+Refer to the `prefect-databricks` SDK documentation linked in the sidebar to explore all the capabilities of the `prefect-databricks` library.
