--- a/docs/integrations/prefect-email/index.mdx
+++ b/docs/integrations/prefect-email/index.mdx
@@ -115,4 +115,4 @@ if __name__ == "__main__":
 
 ## Resources
 
-Refer to the prefect-email API documentation linked in the sidebar to explore all the capabilities of the prefect-email library.
+Refer to the `prefect-email` SDK documentation linked in the sidebar to explore all the capabilities of the `prefect-email` library.
