--- a/docs/integrations/prefect-gcp/index.mdx
+++ b/docs/integrations/prefect-gcp/index.mdx
@@ -243,7 +243,7 @@ def create_bigquery_client():
 
 For assistance using GCP, consult the [Google Cloud documentation](https://cloud.google.com/docs).
 
-Refer to the `prefect-gcp` API documentation linked in the sidebar to explore all the capabilities of the `prefect-gcp` library.
+Refer to the `prefect-gcp` SDK documentation linked in the sidebar to explore all the capabilities of the `prefect-gcp` library.
 
 ### Additional installation options
 
