--- a/docs/integrations/prefect-github/index.mdx
+++ b/docs/integrations/prefect-github/index.mdx
@@ -123,4 +123,4 @@ if __name__ == "__main__":
 
 For assistance using GitHub, consult the [GitHub documentation](https://docs.github.com).
 
-Refer to the `prefect-github` API documentation linked in the sidebar to explore all the capabilities of the `prefect-github` library.
+Refer to the `prefect-github` SDK documentation linked in the sidebar to explore all the capabilities of the `prefect-github` library.
