--- a/docs/integrations/prefect-gitlab/index.mdx
+++ b/docs/integrations/prefect-gitlab/index.mdx
@@ -10,16 +10,16 @@ The prefect-gitlab library makes it easy to interact with GitLab repositories an
 
 - A [GitLab account](https://gitlab.com/).
 
-### Install prefect-gitlab
+### Install `prefect-gitlab`
 
-The following command will install a version of prefect-gitlab compatible with your installed version of Prefect. 
-If you don't already have Prefect installed, it will install the newest version of Prefect as well.
+The following command will install a version of `prefect-gitlab` compatible with your installed version of `prefect`. 
+If you don't already have `prefect` installed, it will install the newest version of `prefect` as well.
 
 ```bash
 pip install "prefect[gitlab]"
 ```
 
-Upgrade to the latest versions of Prefect and prefect-gitlab:
+Upgrade to the latest versions of `prefect` and `prefect-gitlab`:
 
 ```bash
 pip install -U "prefect[gitlab]"
@@ -27,7 +27,7 @@ pip install -U "prefect[gitlab]"
 
 ### Register newly installed block types
 
-Register the block types in the prefect-gitlab module to make them available for use.
+Register the block types in the `prefect-gitlab` module to make them available for use.
 
 ```bash
 prefect block register -m prefect_gitlab
@@ -120,9 +120,11 @@ For example, download the repository contents with the `.get_directory()` method
 ```python
 from prefect_gitlab.repositories import GitLabRepository
 
+
 def fetch_repo():
     private_gitlab_block = GitLabRepository.load("my-gitlab-block")
     private_gitlab_block.get_directory()
+
 
 if __name__ == "__main__":
     fetch_repo()
@@ -132,4 +134,4 @@ if __name__ == "__main__":
 
 For assistance using GitLab, consult the [GitLab documentation](https://gitlab.com).
 
-Refer to the prefect-gitlab API documentation linked in the sidebar to explore all the capabilities of the prefect-gitlab library.
+Refer to the `prefect-gitlab` SDK documentation linked in the sidebar to explore all the capabilities of the `prefect-gitlab` library.
