--- a/docs/integrations/prefect-ray/index.mdx
+++ b/docs/integrations/prefect-ray/index.mdx
@@ -204,6 +204,6 @@ def my_flow():
 
 ## Resources
 
-Refer to the `prefect-ray` API documentation to explore all the capabilities of the prefect-ray library.
+Refer to the `prefect-ray` SDK documentation to explore all the capabilities of the `prefect-ray` library.
 
 For further assistance using Ray, consult the [Ray documentation](https://docs.ray.io/en/latest/index.html).
