--- a/docs/integrations/prefect-shell/index.mdx
+++ b/docs/integrations/prefect-shell/index.mdx
@@ -33,8 +33,8 @@ prefect block register -m prefect_shell
 
 ### Integrate shell commands with Prefect flows
 
-With prefect-shell, you can use shell commands (and/or scripts) in Prefect flows to provide observability and resiliency.
-Prefect-shell can be a useful tool if you're transitioning your orchestration from shell scripts to Prefect.
+With `prefect-shell`, you can use shell commands (and/or scripts) in Prefect flows to provide observability and resiliency.
+`prefect-shell` can be a useful tool if you're transitioning your orchestration from shell scripts to Prefect.
 
 Let's get the shell-abration started!
 
@@ -130,4 +130,4 @@ ping_op = ShellOperation.load("block-name")
 
 ## Resources
 
-Refer to the prefect-shell SDK documentation linked in the sidebar to explore all the capabilities of the prefect-shell library.
+Refer to the `prefect-shell` SDK documentation linked in the sidebar to explore all the capabilities of the `prefect-shell` library.
