--- a/docs/integrations/prefect-snowflake/index.mdx
+++ b/docs/integrations/prefect-snowflake/index.mdx
@@ -248,8 +248,11 @@ prefect block register -m prefect_snowflake
 
 A list of available blocks in `prefect-snowflake` and their setup instructions can be found [here](https://PrefectHQ.github.io/prefect-snowflake/blocks_catalog).
 
-### Feedback
+## Resources
 
-If you encounter any bugs while using `prefect-snowflake`, feel free to open an issue in the [prefect](https://github.com/PrefectHQ/prefect) repository.
+Refer to the `prefect-snowflake` SDK documentation to explore all the capabilities of the `prefect-snowflake` library.
 
-If you have any questions or issues while using `prefect-snowflake`, you can find help in the [Prefect Slack community](https://prefect.io/slack).
+For further assistance using Snowflake, consult the [Snowflake documentation](https://docs.snowflake.com/).
+
+
+
