--- a/docs/integrations/prefect-slack/index.mdx
+++ b/docs/integrations/prefect-slack/index.mdx
@@ -62,3 +62,9 @@ def example_send_message_flow():
 if __name__ == "__main__":
     example_send_message_flow()
 ```
+
+## Resources
+
+Refer to the `prefect-slack` SDK documentation linked in the sidebar to explore all the capabilities of the `prefect-slack` library.
+
+For further assistance developing with Slack, consult the [Slack documentation](https://api.slack.com/).
