--- a/docs/integrations/prefect-aws/index.mdx
+++ b/docs/integrations/prefect-aws/index.mdx
@@ -9,30 +9,26 @@ For example, you can retrieve secrets using AWS Secrets Manager, read and write 
 
 ### Prerequisites
 
-- [Prefect installed](/3.0/get-started/install/).
 - An [AWS account](https://aws.amazon.com/account/) and the necessary permissions to access desired services.
 
-### Install prefect-aws
+### Install `prefect-aws`
 
-Install or update to the latest version of the prefect-aws library and dependencies.
+The following command will install a version of `prefect-aws` compatible with your installed version of `prefect`. 
+If you don't already have `prefect` installed, it will install the newest version of `prefect` as well.
 
-<Tabs>
-    <Tab title="Prefect 2">
-    ```bash
-    pip install -U prefect-aws
-    ```
-    </Tab>
-    <Tab title="Prefect 3">
-    ```bash
-    pip install -U -pre prefect-aws
-    ```
-    </Tab>
-</Tabs>
+```bash
+pip install "prefect[aws]"
+```
 
+Upgrade to the latest versions of `prefect` and `prefect-aws`:
+
+```bash
+pip install -U "prefect[aws]"
+```
 
 ### Register newly installed block types
 
-Register the block types in the prefect-aws module to make them available for use.
+Register the block types in the `prefect-aws` module to make them available for use.
 
 ```bash
 prefect block register -m prefect_aws
@@ -152,4 +148,4 @@ if __name__ == "__main__":
 
 For assistance using AWS, consult the [AWS documentation](https://docs.aws.amazon.com/) and, in particular, the [Boto3 documentation](https://boto3.amazonaws.com/v1/documentation/api/latest/index.html).
 
-Refer to the prefect-aws API documentation linked in the sidebar to explore all the capabilities of the prefect-aws library.
+Refer to the `prefect-aws` SDK documentation linked in the sidebar to explore all the capabilities of the `prefect-aws` library.
