--- a/docs/3.0/manage/cloud/manage-users/secure-access-by-ip-address.mdx
+++ b/docs/3.0/manage/cloud/manage-users/secure-access-by-ip-address.mdx
@@ -3,7 +3,7 @@ title: Secure access by IP address
 description: Manage network access to Prefect Cloud accounts with IP Allowlists.
 ---
 
-IP allowlisting is an available upgrade on certain Enterprise plans. 
+IP allowlisting is an available upgrade to Enterprise plans. 
 IP allowlisting enables account admins to restrict access to Prefect Cloud APIs and UI at the network level. 
 To learn more, please contact your account manager or reach the Prefect team at sales@prefect.io.
 
