--- a/docs/3.0/manage/cloud/manage-users/secure-access-by-ip-address.mdx
+++ b/docs/3.0/manage/cloud/manage-users/secure-access-by-ip-address.mdx
@@ -5,7 +5,7 @@ description: Manage network access to Prefect Cloud accounts with IP Allowlists.
 
 IP allowlisting is an available upgrade to Enterprise plans. 
 IP allowlisting enables account admins to restrict access to Prefect Cloud APIs and UI at the network level. 
-To learn more, please contact your account manager or reach the Prefect team at sales@prefect.io.
+To learn more, please contact your account manager or the Prefect team at sales@prefect.io.
 
 Once the feature has been enabled for your team's Enterprise account, use the Prefect CLI to add an IP address to the allowlist:
 
