--- a/docs/3.0/deploy/infrastructure-concepts/deploy-via-python.mdx
+++ b/docs/3.0/deploy/infrastructure-concepts/deploy-via-python.mdx
@@ -345,7 +345,7 @@ Job variables can be used to customize environment variables, resources limits, 
  allowing fine-grained control over your infrastructure on a per-deployment or per-flow-run basis.
 Any variable defined in the base job template of the associated work pool can be overridden by a job variable.
 
-You can learn more about job variables [here](3.0rc/deploy/infrastructure-concepts/customize).
+You can learn more about job variables [here](/3.0/deploy/infrastructure-concepts/customize).
 
 ## Deploy multiple flows
 
