--- a/docs/3.0/deploy/infrastructure-concepts/deploy-via-python.mdx
+++ b/docs/3.0/deploy/infrastructure-concepts/deploy-via-python.mdx
@@ -202,7 +202,7 @@ To deploy a flow with a schedule, you can use one of the following options:
             work_pool_name="my-work-pool",
             image="my-docker-image:dev",
             push=False,
-            # Run every weekday at 9am
+            # Run every weekday at 9 AM
             rrule="FREQ=WEEKLY;BYDAY=MO,TU,WE,TH,FR;BYHOUR=9;BYMINUTE=0"
         )
     ```
