like -> such as

--- a/docs/3.0/develop/variables.mdx
+++ b/docs/3.0/develop/variables.mdx
@@ -87,8 +87,8 @@ You can use `overwrite=True` to update the value of an existing variable.
 <Warning>
 **Contextual Behavior**
 
-In a sync context (like an `if __name__ == "__main__"` block or simple `def` scope), these methods are used synchronously.
-In an async context (like an `async def` scope), they are used asynchronously.
+In a sync context (such as an `if __name__ == "__main__"` block or simple `def` scope), these methods are used synchronously.
+In an async context (such as an `async def` scope), they are used asynchronously.
 </Warning>
 
 <CodeGroup>
