--- a/docs/3.0/develop/blocks.mdx
+++ b/docs/3.0/develop/blocks.mdx
@@ -136,7 +136,7 @@ To store this block document for future use, use the `.save()` method:
 bucket_block.save(name="my-data-bucket-block")
 ```
 
-To update a prevously saved block document, overwrite the existing document by passing `overwrite=True`:
+To update a previously saved block document, overwrite the existing document by passing `overwrite=True`:
 
 ```python
 bucket_block.save(overwrite=True)
