--- a/docs/3.0/resources/upgrade-to-prefect-3.mdx
+++ b/docs/3.0/resources/upgrade-to-prefect-3.mdx
@@ -3,7 +3,15 @@ title: Upgrade to Prefect 3
 description: Learn how to upgrade from Prefect 2 to Prefect 3.
 ---
 
-Prefect 3 introduces exciting new features and improvements while maintaining compatibility with most Prefect 2 workflows. For the majority of users, upgrading to Prefect 3 will be a seamless process that requires few or no code changes. This guide highlights key changes that you may need to consider when upgrading.
+Prefect 3 introduces exciting new features and improvements while maintaining compatibility with most Prefect 2 workflows. 
+To learn more about the enhanced performance and new features, see [What's new in Prefect 3](/resources/whats-new-prefect-3).
+
+For the majority of users, upgrading to Prefect 3 will be a seamless process that requires few or no code changes. 
+This guide highlights key changes that you may need to consider when upgrading.
+
+<Note>
+[Prefect Cloud](/3.0/manage/cloud) is compatible with both Prefect 3 and Prefect 2 clients. 
+</Note>
 
 ## Quickstart
 
@@ -12,7 +20,6 @@ To upgrade to Prefect 3, run:
 ```bash
 pip install -U prefect
 ```
-
 
 If you self-host a Prefect server, run this command to update your database:
 
@@ -31,7 +38,7 @@ pip install -U 'prefect[aws]'
 ### Pydantic V2
 
 <Info>
-This change affects you if: You use custom Pydantic models with Prefect features.
+This change affects you if: you use custom Pydantic models with Prefect features.
 </Info>
 
 Prefect 3 is built with Pydantic 2 for improved performance. All Prefect objects will automatically upgrade, but if you use custom Pydantic models for flow parameters or custom blocks, you'll need to ensure they are compatible with Pydantic 2. You can continue to use Pydantic 1 models in your own code if they do not interact directly with Prefect.
@@ -48,7 +55,7 @@ Some less-commonly used modules have been renamed, reorganized, or removed for c
 This change affects you if: you use advanced asynchronous behaviors in your flows.
 </info>
 
-In Prefect 2, it was possible to call native `async` tasks from synchronous flows, a pattern that is not normally supported in Python. Prefect 3 removes this functionality in order to reduce complexity and potential issues and edge cases. If you relied on asynchronous tasks in synchronous flows, you must either make your flow asynchronous or use a task runner that supports asynchronous execution. 
+In Prefect 2, it was possible to call native `async` tasks from synchronous flows, a pattern that is not normally supported in Python. Prefect 3 removes this behavior to reduce complexity and potential issues and edge cases. If you relied on asynchronous tasks in synchronous flows, you must either make your flow asynchronous or use a task runner that supports asynchronous execution. 
 
 ### Flow final states
 
@@ -153,11 +160,10 @@ This change affects you if: you directly interact with `PrefectFuture` objects.
 
 PrefectFutures now have a standard synchronous interface, with an asynchronous one [planned soon](https://github.com/PrefectHQ/prefect/issues/15008).
 
-
 ### Automatic task caching
 
 <info>
-This change affects you if: You rely on side effects in your tasks
+This change affects you if: you rely on side effects in your tasks
 </info>
 
 Prefect 3 introduces a powerful idempotency engine. By default, tasks in a flow run are automatically cached if they are called more than once with the same inputs. If you rely on tasks with side effects, this may result in surprising behavior. To disable caching, pass `cache_policy=None` to your task.
@@ -165,7 +171,7 @@ Prefect 3 introduces a powerful idempotency engine. By default, tasks in a flow 
 ### Workers
 
 <info>
-This change affects you if: You're using agents from an early version of Prefect 2.
+This change affects you if: you're using agents from an early version of Prefect 2.
 </info>
 
 In Prefect 2, agents were deprecated in favor of next-generation workers. Workers are now standard in Prefect 3. For detailed information on upgrading from agents to workers, please refer to our [upgrade guide](https://docs-3.prefect.io/3.0/resources/upgrade-agents-to-workers).
