--- a/docs/3.0/resources/upgrade-to-prefect-3.mdx
+++ b/docs/3.0/resources/upgrade-to-prefect-3.mdx
@@ -1,12 +1,14 @@
 ---
-title: Upgrade to Prefect 3
-description: Learn how to upgrade from Prefect 2 to Prefect 3.
+title: Upgrade to Prefect 3.0
+description: Learn how to upgrade from Prefect 2.x to Prefect 3.0.
 ---
 
-Prefect 3 introduces exciting new features and improvements while maintaining compatibility with most Prefect 2 workflows. 
-To learn more about the enhanced performance and new features, see [What's new in Prefect 3](/resources/whats-new-prefect-3).
+Prefect 3.0 is now an official release!
 
-For the majority of users, upgrading to Prefect 3 will be a seamless process that requires few or no code changes. 
+Prefect 3.0 introduces exciting new features and improvements while maintaining compatibility with most Prefect 2 workflows. 
+To learn more about the enhanced performance and new features, see [What's new in Prefect 3.0](/resources/whats-new-prefect-3).
+
+For the majority of users, upgrading to Prefect 3.0 will be a seamless process that requires few or no code changes. 
 This guide highlights key changes that you may need to consider when upgrading.
 
 <Note>
