--- a/docs/3.0/resources/upgrade-to-prefect-3.mdx
+++ b/docs/3.0/resources/upgrade-to-prefect-3.mdx
@@ -3,7 +3,7 @@ title: Upgrade to Prefect 3.0
 description: Learn how to upgrade from Prefect 2.x to Prefect 3.0.
 ---
 
-Prefect 3.0 is now an official release!
+Prefect 3.0 is now the default open source version!
 
 Prefect 3.0 introduces exciting new features and improvements while maintaining compatibility with most Prefect 2 workflows. 
 To learn more about the enhanced performance and new features, see [What's new in Prefect 3.0](/resources/whats-new-prefect-3).
@@ -12,7 +12,7 @@ For the majority of users, upgrading to Prefect 3.0 will be a seamless process t
 This guide highlights key changes that you may need to consider when upgrading.
 
 <Note>
-[Prefect Cloud](/3.0/manage/cloud) is compatible with both Prefect 3 and Prefect 2 clients. 
+[Prefect Cloud](/3.0/manage/cloud) is compatible with both Prefect 3 and Prefect 2 open source clients. 
 </Note>
 
 ## Quickstart
