--- a/docs/3.0/resources/whats-new-prefect-3.mdx
+++ b/docs/3.0/resources/whats-new-prefect-3.mdx
@@ -3,14 +3,14 @@ title: What's new in Prefect 3.0
 sidebarTitle: What's new
 ---
 
-Prefect 3.0 is now an official release!
+Prefect 3.0 is now the default open source version!
 
 Prefect 3.0 represents a significant leap forward in workflow orchestration, bringing a host of new features, performance improvements, and expanded capabilities to enhance your data engineering experience. Let's explore the exciting new additions and enhancements in this open source release.
 
 Most Prefect 2 users can upgrade without changes to their existing workflows. Please review the [upgrade guide](/3.0/resources/upgrade-to-prefect-3) for more information.
 
 <Note>
-[Prefect Cloud](/3.0/manage/cloud) is compatible with both Prefect 3 and Prefect 2 clients. 
+[Prefect Cloud](/3.0/manage/cloud) is compatible with both Prefect 3 and Prefect 2 open source clients. 
 </Note>
 
 ## Open source events and automation system
