--- a/docs/3.0/resources/upgrade-to-prefect-3.mdx
+++ b/docs/3.0/resources/upgrade-to-prefect-3.mdx
@@ -11,9 +11,9 @@ To learn more about the enhanced performance and new features, see [What's new i
 For the majority of users, upgrading to Prefect 3.0 will be a seamless process that requires few or no code changes. 
 This guide highlights key changes that you may need to consider when upgrading.
 
-<Note>
-[Prefect Cloud](/3.0/manage/cloud) is compatible with both Prefect 3 and Prefect 2 open source clients. 
-</Note>
+<Info>
+**Prefect 2** refers to the 2.x lineage of the prefect package, and prefect 3 refers exclusively to the 3.x lineage of the prefect package. Neither version is strictly tied to any aspect of Prefect's commercial product, [Prefect Cloud](/manage/cloud). 
+</Info>
 
 ## Quickstart
 
