--- a/docs/3.0/resources/whats-new-prefect-3.mdx
+++ b/docs/3.0/resources/whats-new-prefect-3.mdx
@@ -15,7 +15,7 @@ Most Prefect 2 users can upgrade without changes to their existing workflows. Pl
 
 ## Open source events and automation system
 
-One of the most anticipated features in Prefect 3 is the introduction of the events and automation system to the open source package. Previously exclusive to Prefect Cloud, this powerful system now allows all users to create sophisticated, event-driven workflows. 
+One of the largest features in Prefect 3.0 is the introduction of the events and automation system to the open source package. Previously exclusive to Prefect Cloud, this system now allows all users to create event-driven workflows and automate their system based on the presence or absence of observable events. 
 
 With this new capability, you can trigger actions based on specific event payloads, cancel runs if certain conditions aren't met, or automate workflow runs based on external events. For instance, you could initiate a data processing pipeline automatically when a new file lands in an S3 bucket. The system also enables you to receive notifications for various system health events, giving you greater visibility and control over your workflows.
 
