--- a/docs/3.0/resources/whats-new-prefect-3.mdx
+++ b/docs/3.0/resources/whats-new-prefect-3.mdx
@@ -9,9 +9,9 @@ Prefect 3.0 represents a significant leap forward in workflow orchestration, bri
 
 Most Prefect 2 users can upgrade without changes to their existing workflows. Please review the [upgrade guide](/3.0/resources/upgrade-to-prefect-3) for more information.
 
-<Note>
-[Prefect Cloud](/3.0/manage/cloud) is compatible with both Prefect 3 and Prefect 2 open source clients. 
-</Note>
+<Info>
+**Prefect 2** refers to the 2.x lineage of the prefect package, and prefect 3 refers exclusively to the 3.x lineage of the prefect package. Neither version is strictly tied to any aspect of Prefect's commercial product, [Prefect Cloud](/manage/cloud). 
+</Info>
 
 ## Open source events and automation system
 
