--- a/docs/3.0/resources/upgrade-to-prefect-3.mdx
+++ b/docs/3.0/resources/upgrade-to-prefect-3.mdx
@@ -3,9 +3,10 @@ title: Upgrade to Prefect 3.0
 description: Learn how to upgrade from Prefect 2.x to Prefect 3.0.
 ---
 
-Prefect 3.0 is now the default open source version!
+Prefect 3.0 introduces a number of enhancements to the OSS product: a new events & automations backend for event-driven workflows and observability, improved runtime performance, autonomous task execution and a streamlined caching layer based on transactional semantics.
 
-Prefect 3.0 introduces exciting new features and improvements while maintaining compatibility with most Prefect 2 workflows. 
+The majority of these enhancements maintain compatibility with most Prefect 2.0 workflows, but there are a few caveats that you may need to adjust for.
+
 To learn more about the enhanced performance and new features, see [What's new in Prefect 3.0](/resources/whats-new-prefect-3).
 
 For the majority of users, upgrading to Prefect 3.0 will be a seamless process that requires few or no code changes. 
