--- a/docs/3.0/resources/upgrade-to-prefect-3.mdx
+++ b/docs/3.0/resources/upgrade-to-prefect-3.mdx
@@ -174,7 +174,7 @@ Prefect 3 introduces a powerful idempotency engine. By default, tasks in a flow 
 ### Workers
 
 <info>
-This change affects you if: you're using agents from an early version of Prefect 2.
+This change affects you if: you're using agents from an early version of Prefect 2.x.
 </info>
 
 In Prefect 2, agents were deprecated in favor of next-generation workers. Workers are now standard in Prefect 3. For detailed information on upgrading from agents to workers, please refer to our [upgrade guide](https://docs-3.prefect.io/3.0/resources/upgrade-agents-to-workers).
