--- a/docs/integrations/use-integrations.mdx
+++ b/docs/integrations/use-integrations.mdx
@@ -8,7 +8,7 @@ description: Prefect integrations are PyPI packages you can install to help you 
 
 Install an integration package with `pip`.
 
-For example, to install `prefect-aws` you may:
+For example, to install `prefect-aws` you can:
 
 - install the package directly:
 ```bash
