--- a/docs/3.0/automate/events/automations-triggers.mdx
+++ b/docs/3.0/automate/events/automations-triggers.mdx
@@ -830,7 +830,7 @@ For example, the following `prefect.flow-run.Completed` event's related resource
 ### Trigger a deployment when a customer completes an order
 Imagine you are running an e-commerce platform and you want to trigger a deployment when a customer completes an order.
 
-There might be a couple events that occur during an order on your platform, for example:
+There might be a number of events that occur during an order on your platform, for example:
 
 - `order.created`
 - `order.item.added`
