--- a/docs/3.0/manage/cloud/manage-users/object-access-control-lists.mdx
+++ b/docs/3.0/manage/cloud/manage-users/object-access-control-lists.mdx
@@ -19,7 +19,7 @@ workspace even if an associated block or deployment has been restricted for that
 
 See the [Prefect Cloud plans](https://www.prefect.io/pricing) to learn more about options for supporting object-level access control.
 
-## ACL Delegation for Work Pools and Deployments
+## ACL delegation for work pools and deployments
 
 Deployments can delegate their permission checks to work pools. This delegation works as follows:
 
